--- a/GameEditor/Base.lproj/MainMenu.xib
+++ b/GameEditor/Base.lproj/MainMenu.xib
@@ -180,7 +180,7 @@
                                             </textFieldCell>
                                             <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                             <prototypeCellViews>
-                                                <tableCellView identifier="point" id="2Ss-NZ-lOU">
+                                                <tableCellView identifier="{CGSize=dd}" id="2Ss-NZ-lOU">
                                                     <rect key="frame" x="71" y="1" width="161" height="17"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                     <subviews>
@@ -207,6 +207,7 @@
                                                                         <userDefinedRuntimeAttribute type="image" keyPath="alternateDec" value="AltDecreaseStepper"/>
                                                                     </userDefinedRuntimeAttributes>
                                                                     <connections>
+                                                                        <binding destination="2Ss-NZ-lOU" name="editable" keyPath="objectValue.editable" id="BDm-9s-s5z"/>
                                                                         <binding destination="2Ss-NZ-lOU" name="value" keyPath="objectValue.x" id="NhU-vE-Azm">
                                                                             <dictionary key="options">
                                                                                 <bool key="NSConditionallySetsEditable" value="YES"/>
@@ -237,6 +238,7 @@
                                                                         <userDefinedRuntimeAttribute type="image" keyPath="alternateDec" value="AltDecreaseStepper"/>
                                                                     </userDefinedRuntimeAttributes>
                                                                     <connections>
+                                                                        <binding destination="2Ss-NZ-lOU" name="editable" keyPath="objectValue.editable" id="ZgX-Az-WCK"/>
                                                                         <binding destination="2Ss-NZ-lOU" name="value" keyPath="objectValue.y" id="vhb-jw-UDZ"/>
                                                                     </connections>
                                                                 </textField>
@@ -255,7 +257,7 @@
                                                             <rect key="frame" x="0.0" y="-1" width="161" height="19"/>
                                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                                             <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" alignment="center" title="angle" bezelStyle="round" id="PMG-7e-KKm">
-                                                                <numberFormatter key="formatter" formatterBehavior="custom10_4" positiveFormat="#.##º" negativeFormat="#.##º" usesGroupingSeparator="NO" minimumIntegerDigits="1" maximumIntegerDigits="2000000000" maximumFractionDigits="2" id="yZt-gz-Tjc"/>
+                                                                <numberFormatter key="formatter" formatterBehavior="custom10_4" positiveFormat="#.###º" negativeFormat="#.###º" usesGroupingSeparator="NO" minimumIntegerDigits="1" maximumIntegerDigits="2000000000" maximumFractionDigits="2" id="yZt-gz-Tjc"/>
                                                                 <font key="font" metaFont="smallSystem"/>
                                                                 <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
                                                                 <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -270,6 +272,7 @@
                                                                 <userDefinedRuntimeAttribute type="image" keyPath="alternateDec" value="AltDecreaseStepper"/>
                                                             </userDefinedRuntimeAttributes>
                                                             <connections>
+                                                                <binding destination="ykA-kB-Fwq" name="editable" keyPath="objectValue.editable" id="AUA-4d-T4U"/>
                                                                 <binding destination="ykA-kB-Fwq" name="value" keyPath="objectValue.propertyValue" id="edY-f5-Cs6">
                                                                     <dictionary key="options">
                                                                         <string key="NSValueTransformerName">DegreesTransformer</string>
@@ -279,7 +282,36 @@
                                                         </textField>
                                                     </subviews>
                                                 </tableCellView>
-                                                <tableCellView identifier="bool" id="52C-rc-ywy">
+                                                <tableCellView identifier="d" id="ksH-n0-sGf">
+                                                    <rect key="frame" x="71" y="20" width="161" height="17"/>
+                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                    <subviews>
+                                                        <textField verticalHuggingPriority="750" id="9NX-II-pak" customClass="StepperTextField">
+                                                            <rect key="frame" x="0.0" y="-1" width="161" height="19"/>
+                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" alignment="center" title="double" bezelStyle="round" id="4km-Sf-gY5">
+                                                                <numberFormatter key="formatter" formatterBehavior="custom10_4" positiveFormat="#.###" negativeFormat="#.###" usesGroupingSeparator="NO" minimumIntegerDigits="1" maximumIntegerDigits="2000000000" maximumFractionDigits="2" id="BDB-5a-Dzh"/>
+                                                                <font key="font" metaFont="smallSystem"/>
+                                                                <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
+                                                                <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                                            </textFieldCell>
+                                                            <userDefinedRuntimeAttributes>
+                                                                <userDefinedRuntimeAttribute type="number" keyPath="draggingMult">
+                                                                    <real key="value" value="0.01"/>
+                                                                </userDefinedRuntimeAttribute>
+                                                                <userDefinedRuntimeAttribute type="image" keyPath="increase" value="IncreaseStepper"/>
+                                                                <userDefinedRuntimeAttribute type="image" keyPath="alternateInc" value="AltIncreaseStepper"/>
+                                                                <userDefinedRuntimeAttribute type="image" keyPath="decrease" value="DecreaseStepper"/>
+                                                                <userDefinedRuntimeAttribute type="image" keyPath="alternateDec" value="AltDecreaseStepper"/>
+                                                            </userDefinedRuntimeAttributes>
+                                                            <connections>
+                                                                <binding destination="ksH-n0-sGf" name="editable" keyPath="objectValue.editable" id="Iap-x3-KHX"/>
+                                                                <binding destination="ksH-n0-sGf" name="value" keyPath="objectValue.propertyValue" id="mNl-7d-9mw"/>
+                                                            </connections>
+                                                        </textField>
+                                                    </subviews>
+                                                </tableCellView>
+                                                <tableCellView identifier="c" id="52C-rc-ywy">
                                                     <rect key="frame" x="71" y="39" width="161" height="17"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                     <subviews>
@@ -291,6 +323,7 @@
                                                                 <font key="font" metaFont="smallSystem"/>
                                                             </buttonCell>
                                                             <connections>
+                                                                <binding destination="52C-rc-ywy" name="enabled" keyPath="objectValue.editable" id="wjB-9N-hjW"/>
                                                                 <binding destination="52C-rc-ywy" name="value" keyPath="objectValue.propertyValue" id="pxm-fR-xBz"/>
                                                             </connections>
                                                         </button>
@@ -309,6 +342,7 @@
                                                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                                             </textFieldCell>
                                                             <connections>
+                                                                <binding destination="vJr-p1-JI2" name="editable" keyPath="objectValue.editable" id="Jl6-9W-H7g"/>
                                                                 <binding destination="vJr-p1-JI2" name="value" keyPath="objectValue.propertyValue" id="dcN-zi-sJF"/>
                                                             </connections>
                                                         </textField>
